--- a/Cloudents.Web/ClientApp/components/results/SortAndFilter.less
+++ b/Cloudents.Web/ClientApp/components/results/SortAndFilter.less
@@ -3,7 +3,10 @@
 .sort-filter-wrap {
     position: -webkit-sticky;
     position: sticky;
-    top: 74px;
+    top: @navBarHeightDesktop + 40;
+    padding-top: 32px;
+    /*position: sticky;
+    top: 74px;*/
 }
 
 ﻿.sort-switch {
