--- a/Cloudents.Web/ClientApp/components/results/ResultItem.less
+++ b/Cloudents.Web/ClientApp/components/results/ResultItem.less
@@ -14,15 +14,20 @@
     }
 
     &.text-flashcard {
+        margin-bottom: 4px;
         color: @Flashcards;
     }
     //.giveMeEllipsis(1,1.14);
     //margin-right: 40px;
 }
-.right-section  {
-    min-width:0; // elipsis casus issue this is the solution
+
+.right-section {
+    min-width: 0; // elipsis casus issue this is the solution
+    margin-left: 4px;
 }
+
 p {
+    max-width: 328px;
     //.giveMeEllipsis(3,1.29);
     font-size: 14px;
     color: #000;
