--- a/Cloudents.Web/wwwroot/Content/main.less
+++ b/Cloudents.Web/wwwroot/Content/main.less
@@ -1,8 +1,4 @@
-﻿//@import "../../ClientApp/mixin.less";
-
-
-@Site-Background: #eeeeee;
-
+﻿@Site-Background: #eeeeee;
 html {
     -ms-text-size-adjust: 100%;
     -webkit-text-size-adjust: 100%;
@@ -17,9 +13,8 @@ body {
     font-family: 'Open Sans', sans-serif;
     line-height: normal;
 }
-
-input[type="text"]:focus {
-    outline: none;
+.application.theme--light {
+    background-color: @Site-Background !important;
 }
 input[type="checkbox"] {
     cursor:pointer;
@@ -108,45 +103,6 @@ button {
 
 .loop2(1);
 
-
-
-
-
-/*article,
-aside,
-details,
-figcaption,
-figure,
-footer,
-header,
-hgroup,
-main,
-menu,
-nav,
-section,
-summary {
-    display: block;
-}*/
-/*audio,
-canvas,
-progress,
-video {
-    display: inline-block;
-    vertical-align: baseline;
-}*/
-/*audio:not([controls]) {
-    display: none;
-    height: 0;
-}*/
-/*[hidden],
-template {
-    display: none;
-}
-
-a {
-    background-color: transparent;
-    
-}*/
 a,
 a:active,
 a:hover {
@@ -160,204 +116,4 @@ input:-webkit-autofill, textarea:-webkit-autofill, select:-webkit-autofill {
 .cdn-only {
     position:absolute;
 }
-/*abbr[title] {
-    border-bottom: 1px dotted;
-}
 
-b,
-strong {
-    font-weight: bold;
-}
-
-dfn {
-    font-style: italic;
-}
-
-h1 {
-    font-size: 2em;
-    margin: 0.67em 0;
-}
-
-mark {
-    background: #ff0;
-    color: #000;
-}
-
-small {
-    font-size: 80%;
-}
-
-sub,
-sup {
-    font-size: 75%;
-    line-height: 0;
-    position: relative;
-    vertical-align: baseline;
-}
-
-sup {
-    top: -0.5em;
-}
-
-sub {
-    bottom: -0.25em;
-}
-
-img {
-    border: 0;
-}
-
-svg:not(:root) {
-    overflow: hidden;
-}
-
-figure {
-    margin: 1em 40px;
-}
-
-hr {
-    -webkit-box-sizing: content-box;
-    -moz-box-sizing: content-box;
-    box-sizing: content-box;
-    height: 0;
-}
-
-pre {
-    overflow: auto;
-}
-
-code,
-kbd,
-pre,
-samp {
-    font-family: monospace, monospace;
-    font-size: 1em;
-}
-
-button,
-input,
-optgroup,
-select,
-textarea {
-    color: inherit;
-    font: inherit;
-    margin: 0;
-}
-
-button {
-    overflow: visible;
-}
-
-button,
-select {
-    text-transform: none;
-}
-
-button,
-html input[type="button"],
-input[type="reset"],
-input[type="submit"] {
-    -webkit-appearance: button;
-    cursor: pointer;
-}
-
-button[disabled],
-html input[disabled] {
-    cursor: default;
-}
-
-button::-moz-focus-inner,
-input::-moz-focus-inner {
-    border: 0;
-    padding: 0;
-}
-
-button:focus {
-    outline: none;
-}
-
-input {
-    line-height: normal;
-}
-
-input[type="checkbox"],
-input[type="radio"] {
-    -webkit-box-sizing: border-box;
-    -moz-box-sizing: border-box;
-    box-sizing: border-box;
-    padding: 0;
-}
-
-input[type="number"]::-webkit-inner-spin-button,
-input[type="number"]::-webkit-outer-spin-button {
-    height: auto;
-}
-
-input[type="search"] {
-    -webkit-appearance: textfield;
-    -webkit-box-sizing: content-box;
-    -moz-box-sizing: content-box;
-    box-sizing: content-box;
-}
-
-input[type="search"]::-webkit-search-cancel-button,
-input[type="search"]::-webkit-search-decoration {
-    -webkit-appearance: none;
-}
-
-fieldset {
-    border: 1px solid #c0c0c0;
-    margin: 0 2px;
-    padding: 0.35em 0.625em 0.75em;
-}
-
-legend {
-    border: 0;
-    padding: 0;
-}
-
-textarea {
-    overflow: auto;
-}
-
-optgroup {
-    font-weight: bold;
-}
-
-table {
-    border-collapse: collapse;
-    border-spacing: 0;
-}
-
-td,
-th {
-    padding: 0;
-}
-
-ul {
-    margin: 0;
-    padding: 0;
-}
-
-body {
-    background: #fff;
-    //font-family: @font-regular;
-}
-
-.wrapper {
-    margin: 0;
-    overflow: hidden;
-    position: relative;
-    width: 100%;
-}
-
-.container {
-    margin: 0 auto;
-    padding-bottom: 0;
-    padding-top: 0;
-    max-width: 1280px;
-}
-
-p, div {
-    word-wrap: break-word;
-}*/
