--- a/Cloudents.Web/ClientApp/components/results/ResultBook.less
+++ b/Cloudents.Web/ClientApp/components/results/ResultBook.less
@@ -1,4 +1,5 @@
 ﻿@import "../../mixin.less";
+
 .book-cell {
     display: block;
     width: 100%;
@@ -31,9 +32,15 @@
 
     .cell-title {
         color: @Textbooks;
+        margin-bottom: 6px;
     }
 
-    .imageWrapper(104px,160px);
+    .book-info {
+        line-height: 22px;
+        letter-spacing: -0.5px;
+    }
+
+    .imageWrapper(120px,170px);
 
     .img-wrap {
         .flexSameSize();
