--- a/Cloudents.Web/ClientApp/components/results/SortAndFilter.less
+++ b/Cloudents.Web/ClientApp/components/results/SortAndFilter.less
@@ -7,6 +7,19 @@
     padding-top: 6px;
     /*position: sticky;
     top: 74px;*/
+
+    @heightOfTitle: 22px;
+
+    h3 {
+        font-size: 16px;
+        color: @color-blue;
+        font-weight: bold;
+        margin-bottom: 8px;
+        line-height: normal;
+        height: @heightOfTitle;
+        font-weight: 600;
+        letter-spacing: -0.7px;
+    }
 }
 
 ﻿.sort-switch {
@@ -91,7 +104,7 @@
             max-width: 100%;
 
             .expansion-panel__header {
-                padding: 9px 4px;
+                padding: 9px 5px 9px 8px;
                 font-weight: bold;
                 border-bottom: 1px solid;
                 border-top: 0;
@@ -99,6 +112,7 @@
                 border-right: 0;
                 border-image: @border-bg-image;
                 text-transform: capitalize;
+                letter-spacing: -0.6px;
 
                 i.icon {
                     font-size: 8px;
@@ -114,7 +128,7 @@
                 cursor: pointer;
 
                 label {
-                    margin-left: 6px;
+                    margin-left: 4px;
                     line-height: 24px;
                     .giveMeEllipsisOne;
                     max-width: 124px;
@@ -126,6 +140,7 @@
             }
 
             .expansion-panel__body .sort-filter {
+                padding: 10px 8px 8px 6px;
                 border-bottom: 1px solid;
                 border-top: 0;
                 border-left: 0;
