--- a/Cloudents.Web/ClientApp/components/header/header.less
+++ b/Cloudents.Web/ClientApp/components/header/header.less
@@ -23,7 +23,7 @@
 
     .logo-link {
         .inTheMiddle();
-        fill:#fff;
+        fill: #fff;
     }
 
     .logo {
@@ -46,6 +46,10 @@
         .search-b {
             height: 40px;
             min-height: 40px;
+
+            .sbf-mic {
+                color: @color-blue !important;
+            }
         }
     }
 
