--- a/Cloudents.Web/Views/Shared/Index.cshtml
+++ b/Cloudents.Web/Views/Shared/Index.cshtml
@@ -1,21 +1,22 @@
-﻿@using System.Reflection
+﻿@using Cloudents.Web.Extensions
+@inject WebPackChunkName Provider
 @{
     ViewBag.Title = "Spitball";
     Layout = "_Layout";
-    var version = Assembly.GetEntryAssembly().GetName().Version.ToString(4);
+    var main = Provider.GetTag("main");
 }
 
-<div id="app">Loading....</div>
 
+<div id="app">Loading....</div>
+<div class="cdn-only2"></div>
 
 @section scripts {
     <environment include="Development">
-        <script src="~/dist/main.js" asp-append-version="true"></script>
+        <script src="~/dist/@main.Js"></script>
     </environment>
     <environment exclude="Development">
-        <script src="//spitball.azureedge.net/dist/main.js?v=@version"
-                asp-append-version="true"
-                asp-fallback-src="~/dist/main.js"
+        <script src="//spitball.azureedge.net/dist/@main.Js"
+                asp-fallback-src="~/dist/@main.Js"
                 asp-fallback-test="window.mainCdn">
         </script>
     </environment>
