--- a/Cloudents.Web/ClientApp/components/helpers/generalPage.less
+++ b/Cloudents.Web/ClientApp/components/helpers/generalPage.less
@@ -3,16 +3,16 @@
 //.wrap {
 //margin-top: 2%;
 //}
-.navigation-bar {
+/*.navigation-bar {
     position: -webkit-sticky;
     position: sticky;
     top: 70px;
     background: #eee;
-}
+}*/
 
-.application--wrap {
+/*.application--wrap {
     background: #eeeeee;
-}
+}*/
 
 .p-result {
 
@@ -26,9 +26,9 @@
     // }
 }
 
-.results-section {
+/*.results-section {
     margin: 0;
-}
+}*/
 
 @spaceFromNavBar: @resultsTabsHeight + 40; //40 px of space according to Shlomi's request
 
@@ -74,6 +74,7 @@
         min-width: 102px;
         border-radius: 4px;
         color: @color-grey;
+        z-index:0;
     }
     /*.chip {
         background-color: @Dividers;
