--- a/Cloudents.Web/ClientApp/components/navbar/TheNavbar.less
+++ b/Cloudents.Web/ClientApp/components/navbar/TheNavbar.less
@@ -17,7 +17,7 @@
         top: @navBarHeightMobile;
         padding-left: 8px;
         //Mobile class added for mobile bookDetailsFilter
-        &.Mobile{
+        &.bookDetailsMobile{
             .tabs__li{
                 background:mediumpurple ;
             }
