--- a/Cloudents.Web/Views/Shared/Index.cshtml
+++ b/Cloudents.Web/Views/Shared/Index.cshtml
@@ -1,4 +1,6 @@
-﻿@using Cloudents.Web.Extensions
+﻿@using Cloudents.Web.Controllers
+@using Cloudents.Web.Extensions
+@using Cloudents.Web.Views
 @inject WebPackChunkName Provider
 @{
     ViewBag.Title = "Spitball";
@@ -15,7 +17,7 @@
         <script src="~/dist/@main.Js"></script>
     </environment>
     <environment exclude="Development">
-        <script src="//spitball.azureedge.net/dist/@main.Js"
+        <script src="@Constants.CdnEndpoint/dist/@main.Js"
                 asp-fallback-src="~/dist/@main.Js"
                 asp-fallback-test="window.mainCdn">
         </script>
