--- a/Cloudents.Web/ClientApp/components/home/home.less
+++ b/Cloudents.Web/ClientApp/components/home/home.less
@@ -34,14 +34,14 @@
             padding-bottom: 88px;
         }
 
-        .logo-wrapper {
+        /*.logo-wrapper {
             .flexSameSize();
             padding: 12px 12px 10px 12px;
             border-radius: 0 0 8px 8px;
             margin-left: 36px;
             .inTheMiddle();
 
-            .logo {
+            /*.logo {
                 width: 165px;
                 // fill: @color-blue;
             }
@@ -56,9 +56,9 @@
                     fill: white;
                 }
             }
-        }
+        }*/
 
-        header {
+        /*header {
             li {
                 float: left;
                 list-style: none;
@@ -70,7 +70,7 @@
                 padding-left: 34px;
                 letter-spacing: -0.3px;
             }
-        }
+        }*/
 
         > .container {
             padding: 0;
@@ -83,7 +83,7 @@
             .box-title {
                 font-size: 50px;
                 line-height: normal;
-                margin: 100px 0 30px;
+                padding: 100px 0 30px;
                 font-weight: 300;
                 letter-spacing: -0.5px;
 
